--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.699.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
@@ -21,7 +25,8 @@
     "next-sitemap": "^4.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@types/node": "^22.9.3",
